src/test/ui/borrowck/issue-82126-mismatched-subst-and-hir.stderr
error[E0107]: this struct takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:16:59
   |
LL | async fn buy_lock(generator: &Mutex<MarketMultiplier>) -> LockedMarket<'_> {
   |                                                           ^^^^^^^^^^^^---- help: remove these generics
   |                                                           |
   |                                                           expected 0 lifetime arguments
   |
note: struct defined here, with 0 lifetime parameters
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:23:8
   |
LL | struct LockedMarket<T>(T);
   |        ^^^^^^^^^^^^

error[E0107]: this struct takes 1 generic argument but 0 generic arguments were supplied
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:16:59
   |
LL | async fn buy_lock(generator: &Mutex<MarketMultiplier>) -> LockedMarket<'_> {
   |                                                           ^^^^^^^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:23:8
   |
LL | struct LockedMarket<T>(T);
   |        ^^^^^^^^^^^^ -
help: add missing generic argument
   |
LL | async fn buy_lock(generator: &Mutex<MarketMultiplier>) -> LockedMarket<'_, T> {
   |                                                                          ^^^

error[E0515]: cannot return value referencing temporary value
  --> $DIR/issue-82126-mismatched-subst-and-hir.rs:19:5
   |
LL |     LockedMarket(generator.lock().unwrap().buy())
   |     ^^^^^^^^^^^^^-------------------------^^^^^^^
   |     |            |
   |     |            temporary value created here
   |     returns a value referencing data owned by the current function

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0515.
For more information about an error, try `rustc --explain E0107`.
